# dissect.regf

./: .git-blame-ignore-revs  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
dissect/regf/: __init__.py  c_regf.py  c_regf.pyi  exceptions.py  regf.py
examples/: walkhive.py
tests/: conftest.py  test_regf.py
tests/_docs/: conf.py
