[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.regf
license = Affero General Public License v3
description = A Dissect module implementing a parser for Windows registry file format, used to store application and OS configuration on Windows operating systems
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3
